# fermat-math

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  fermat-poc-prd.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/fermat-core/: Cargo.toml  README.md
crates/fermat-core/src/: arithmetic.rs  compare.rs  convert.rs  decimal.rs  display.rs  error.rs  lib.rs  rounding.rs  tests_arithmetic.rs  tests_rounding.rs
crates/fermat-core/tests/: determinism.rs  properties.rs
crates/fermat-solana/: Cargo.toml  README.md
crates/fermat-solana/src/: account.rs  borsh_impl.rs  lib.rs  token.rs
programs/fermat-bench/: Cargo.toml
programs/fermat-bench/src/: lib.rs
programs/fermat-lending/: Cargo.toml
programs/fermat-lending/src/: lib.rs  math.rs  oracle.rs  state.rs
programs/fermat-lending/src/instructions/: borrow.rs  deposit.rs  liquidate.rs  mod.rs  repay.rs  withdraw.rs
