[package]
name        = "fermat-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Anchor program for compute-unit benchmarking of fermat-core operations"
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
fermat-core   = { workspace = true }
fermat-solana = { workspace = true }
borsh         = "0.10"
anchor-lang   = "0.29"
